@@ -1,4 +1,5 @@
 2012-03-02  Kirit Saelensminde  <kirit@felspar.com>
+ Allow PUT to be done at a new position in the JSON. Objects and arrays will be created as needed to accommodate the new data at the requested location.
  Any query string at all will force JSON response (as text/plain for now). For future compatibility use __ as the query string key. I.e. http://localhost:8080/?__=
 
 2012-02-26  Kirit Saelensminde  <kirit@felspar.com>
